fix: dark mode carte

--- a/src/styles/pages/map.css
+++ b/src/styles/pages/map.css
@@ -303,3 +303,9 @@
         transform: translateY(0);
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .leaflet-tile {
+        filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.5) !important;
+    }
+}
